--- a/environment.yml
+++ b/environment.yml
@@ -1,18 +1,198 @@
 name: TEC_LncMir
-
+channels:
+  - conda-forge
 dependencies:
-  - pip
-  - python=3.8
-  - biopython=1.76
-  - h5py
-  - matplotlib
-  - numpy
-  - pandas
-  - scikit-learn
-  - scipy
-  - seaborn
-  - setuptools=58.2.0
-  - tqdm
-  - attrdict
-  - einops
-  - regex
+  - _libgcc_mutex=0.1=conda_forge
+  - _openmp_mutex=4.5=2_kmp_llvm
+  - alsa-lib=1.2.8=h166bdaf_0
+  - attr=2.5.1=h166bdaf_1
+  - attrdict=2.0.1=pyhd8ed1ab_1
+  - biopython=1.76=py38h516909a_0
+  - brotli=1.0.9=h166bdaf_8
+  - brotli-bin=1.0.9=h166bdaf_8
+  - bzip2=1.0.8=h7f98852_4
+  - c-ares=1.19.1=hd590300_0
+  - ca-certificates=2023.5.7=hbcca054_0
+  - cached-property=1.5.2=hd8ed1ab_1
+  - cached_property=1.5.2=pyha770c72_1
+  - cairo=1.16.0=hbbf8b49_1016
+  - certifi=2023.5.7=pyhd8ed1ab_0
+  - cffi=1.15.1=py38h4a40e3a_3
+  - charset-normalizer=3.1.0=pyhd8ed1ab_0
+  - colorama=0.4.6=pyhd8ed1ab_0
+  - contourpy=1.0.7=py38hfbd4bf9_0
+  - cuda-version=11.8=h70ddcb2_2
+  - cudatoolkit=11.8.0=h37601d7_11
+  - cudnn=8.8.0.121=h0800d71_0
+  - cycler=0.11.0=pyhd8ed1ab_0
+  - dbus=1.13.6=h5008d03_3
+  - einops=0.6.1=pyhd8ed1ab_0
+  - expat=2.5.0=hcb278e6_1
+  - font-ttf-dejavu-sans-mono=2.37=hab24e00_0
+  - font-ttf-inconsolata=3.000=h77eed37_0
+  - font-ttf-source-code-pro=2.038=h77eed37_0
+  - font-ttf-ubuntu=0.83=hab24e00_0
+  - fontconfig=2.14.2=h14ed4e7_0
+  - fonts-conda-ecosystem=1=0
+  - fonts-conda-forge=1=0
+  - fonttools=4.39.4=py38h01eb140_0
+  - freetype=2.12.1=hca18f0e_1
+  - gettext=0.21.1=h27087fc_0
+  - glib=2.76.2=hfc55251_0
+  - glib-tools=2.76.2=hfc55251_0
+  - graphite2=1.3.13=h58526e2_1001
+  - gst-plugins-base=1.22.3=h938bd60_1
+  - gstreamer=1.22.3=h977cf35_1
+  - h5py=3.8.0=nompi_py38h43830be_101
+  - harfbuzz=7.3.0=hdb3a94d_0
+  - hdf5=1.14.0=nompi_hb72d44e_103
+  - icu=72.1=hcb278e6_0
+  - idna=3.4=pyhd8ed1ab_0
+  - importlib-resources=5.12.0=pyhd8ed1ab_0
+  - importlib_resources=5.12.0=pyhd8ed1ab_0
+  - joblib=1.2.0=pyhd8ed1ab_0
+  - keyutils=1.6.1=h166bdaf_0
+  - kiwisolver=1.4.4=py38h43d8883_1
+  - krb5=1.20.1=h81ceb04_0
+  - lame=3.100=h166bdaf_1003
+  - lcms2=2.15=haa2dc70_1
+  - ld_impl_linux-64=2.40=h41732ed_0
+  - lerc=4.0.0=h27087fc_0
+  - libaec=1.0.6=hcb278e6_1
+  - libblas=3.9.0=16_linux64_openblas
+  - libbrotlicommon=1.0.9=h166bdaf_8
+  - libbrotlidec=1.0.9=h166bdaf_8
+  - libbrotlienc=1.0.9=h166bdaf_8
+  - libcap=2.67=he9d0100_0
+  - libcblas=3.9.0=16_linux64_openblas
+  - libclang=16.0.4=default_h1cdf331_0
+  - libclang13=16.0.4=default_h4d60ac6_0
+  - libcups=2.3.3=h36d4200_3
+  - libcurl=8.1.0=h409715c_0
+  - libdeflate=1.18=h0b41bf4_0
+  - libedit=3.1.20191231=he28a2e2_2
+  - libev=4.33=h516909a_1
+  - libevent=2.1.12=h3358134_0
+  - libexpat=2.5.0=hcb278e6_1
+  - libffi=3.4.2=h7f98852_5
+  - libflac=1.4.2=h27087fc_0
+  - libgcc-ng=12.2.0=h65d4601_19
+  - libgcrypt=1.10.1=h166bdaf_0
+  - libgfortran-ng=12.2.0=h69a702a_19
+  - libgfortran5=12.2.0=h337968e_19
+  - libglib=2.76.2=hebfc3b9_0
+  - libgpg-error=1.46=h620e276_0
+  - libiconv=1.17=h166bdaf_0
+  - libjpeg-turbo=2.1.5.1=h0b41bf4_0
+  - liblapack=3.9.0=16_linux64_openblas
+  - libllvm16=16.0.4=h5cf9203_0
+  - libnghttp2=1.52.0=h61bc06f_0
+  - libnsl=2.0.0=h7f98852_0
+  - libogg=1.3.4=h7f98852_1
+  - libopenblas=0.3.21=pthreads_h78a6416_3
+  - libopus=1.3.1=h7f98852_1
+  - libpng=1.6.39=h753d276_0
+  - libpq=15.3=hbcd7760_1
+  - libprotobuf=3.21.12=h3eb15da_0
+  - libsndfile=1.2.0=hb75c966_0
+  - libsqlite=3.42.0=h2797004_0
+  - libssh2=1.10.0=hf14f497_3
+  - libstdcxx-ng=12.2.0=h46fd767_19
+  - libsystemd0=253=h8c4010b_1
+  - libtiff=4.5.0=ha587672_6
+  - libuuid=2.38.1=h0b41bf4_0
+  - libvorbis=1.3.7=h9c3ff4c_0
+  - libwebp-base=1.3.0=h0b41bf4_0
+  - libxcb=1.15=h0b41bf4_0
+  - libxkbcommon=1.5.0=h5d7e998_3
+  - libxml2=2.11.4=h0d562d8_0
+  - libzlib=1.2.13=h166bdaf_4
+  - llvm-openmp=16.0.4=h4dfa4b3_0
+  - lz4-c=1.9.4=hcb278e6_0
+  - magma=2.6.2=hc72dce7_0
+  - matplotlib=3.7.1=py38h578d9bd_0
+  - matplotlib-base=3.7.1=py38hd6c3c57_0
+  - mkl=2022.2.1=h84fe81f_16997
+  - mpg123=1.31.3=hcb278e6_0
+  - munkres=1.1.4=pyh9f0ad1d_0
+  - mysql-common=8.0.32=hf1915f5_2
+  - mysql-libs=8.0.32=hca2cd23_2
+  - nccl=2.15.5.1=h0800d71_0
+  - ncurses=6.3=h27087fc_1
+  - ninja=1.11.1=h924138e_0
+  - nspr=4.35=h27087fc_0
+  - nss=3.89=he45b914_0
+  - numpy=1.24.3=py38h59b608b_0
+  - openjpeg=2.5.0=hfec8fc6_2
+  - openssl=3.1.0=hd590300_3
+  - packaging=23.1=pyhd8ed1ab_0
+  - pandas=2.0.1=py38h01efb38_1
+  - patsy=0.5.3=pyhd8ed1ab_0
+  - pcre2=10.40=hc3806b6_0
+  - pillow=9.5.0=py38h885162f_1
+  - pip=23.1.2=pyhd8ed1ab_0
+  - pixman=0.40.0=h36c2ea0_0
+  - platformdirs=3.5.1=pyhd8ed1ab_0
+  - ply=3.11=py_1
+  - pooch=1.7.0=pyha770c72_3
+  - pthread-stubs=0.4=h36c2ea0_1001
+  - pulseaudio-client=16.1=h5195f5e_3
+  - pycparser=2.21=pyhd8ed1ab_0
+  - pyparsing=3.0.9=pyhd8ed1ab_0
+  - pyqt=5.15.7=py38ha0d8c90_3
+  - pyqt5-sip=12.11.0=py38h8dc9893_3
+  - pysocks=1.7.1=pyha2e5f31_6
+  - python=3.8.16=he550d4f_1_cpython
+  - python-dateutil=2.8.2=pyhd8ed1ab_0
+  - python-tzdata=2023.3=pyhd8ed1ab_0
+  - python_abi=3.8=3_cp38
+  - pytorch=1.13.1=cuda112py38hd94e077_200
+  - pytz=2023.3=pyhd8ed1ab_0
+  - qt-main=5.15.8=h01ceb2d_12
+  - readline=8.2=h8228510_1
+  - regex=2023.5.5=py38h01eb140_0
+  - requests=2.31.0=pyhd8ed1ab_0
+  - scikit-learn=1.2.2=py38hd4b6e60_1
+  - scipy=1.10.1=py38h59b608b_3
+  - seaborn=0.12.2=hd8ed1ab_0
+  - seaborn-base=0.12.2=pyhd8ed1ab_0
+  - setuptools=58.2.0=py38h578d9bd_0
+  - sip=6.7.9=py38h17151c0_0
+  - six=1.16.0=pyh6c4a22f_0
+  - sleef=3.5.1=h9b69904_2
+  - statsmodels=0.14.0=py38h31356c5_1
+  - tbb=2021.7.0=h924138e_0
+  - threadpoolctl=3.1.0=pyh8a188c0_0
+  - tk=8.6.12=h27826a3_0
+  - toml=0.10.2=pyhd8ed1ab_0
+  - tomli=2.0.1=pyhd8ed1ab_0
+  - torchvision=0.15.1=cuda112py38h1d585ce_0
+  - tornado=6.3.2=py38h01eb140_0
+  - tqdm=4.65.0=pyhd8ed1ab_1
+  - typing-extensions=4.5.0=hd8ed1ab_0
+  - typing_extensions=4.5.0=pyha770c72_0
+  - unicodedata2=15.0.0=py38h0a891b7_0
+  - urllib3=2.0.2=pyhd8ed1ab_0
+  - wheel=0.40.0=pyhd8ed1ab_0
+  - xcb-util=0.4.0=hd590300_1
+  - xcb-util-image=0.4.0=h8ee46fc_1
+  - xcb-util-keysyms=0.4.0=h8ee46fc_1
+  - xcb-util-renderutil=0.3.9=hd590300_1
+  - xcb-util-wm=0.4.1=h8ee46fc_1
+  - xkeyboard-config=2.38=h0b41bf4_0
+  - xorg-kbproto=1.0.7=h7f98852_1002
+  - xorg-libice=1.0.10=h7f98852_0
+  - xorg-libsm=1.2.3=hd9c2040_1000
+  - xorg-libx11=1.8.4=h8ee46fc_1
+  - xorg-libxau=1.0.11=hd590300_0
+  - xorg-libxdmcp=1.1.3=h7f98852_0
+  - xorg-libxext=1.3.4=h0b41bf4_2
+  - xorg-libxrender=0.9.10=h7f98852_1003
+  - xorg-renderproto=0.11.1=h7f98852_1002
+  - xorg-xextproto=7.3.0=h0b41bf4_1003
+  - xorg-xf86vidmodeproto=2.3.1=h7f98852_1002
+  - xorg-xproto=7.0.31=h7f98852_1007
+  - xz=5.2.6=h166bdaf_0
+  - zipp=3.15.0=pyhd8ed1ab_0
+  - zlib=1.2.13=h166bdaf_4
+  - zstd=1.5.2=h3eb15da_6
